@@ -8,7 +8,7 @@ ARGUMENTS
     *       "-d flag"
 
              Turn debug (0/1).
-             Default value is 1.
+             Default value is 0.
 
     *       "-e"
 
