@@ -1,5 +1,6 @@
 0.17
  - Add missing dependency for Getopt::Std.
+ - Change default value of debug to disable.
  - Fix minimal Perl version in Makefile.PL.
  - Update Module::Install to 1.19 version.
  - Update author github username.
